# MailService

./: .env.template  Dockerfile  client.py  dependences.py  docker-compose.yml  main.py  pyproject.toml  schemas.py  service.py  settings.py
broker/: producer.py
infra/: gunicorn.conf.py
