[tool.poetry]
name = "mailservice"
version = "0.1.0"
description = ""
authors = ["Fedorov Semen <FedorovSemen28@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.112.1"
uvicorn = {extras = ["standart"], version = "^0.30.6"}
aio-pika = "^9.4.3"
pydantic = {extras = ["email"], version = "^2.8.2"}
pydantic-settings = "^2.4.0"
aiosmtplib = "^3.0.2"
aiokafka = "^0.11.0"
fast-depends = "^2.4.11"
gunicorn = "^23.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
